http_redirect_to_https.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: gateway
  name: http-nginx-1
spec:
  parentRefs:
  - name: gateway-api-integrator
    namespace: gateway
    sectionName: gateway-api-integrator-http-listener
  rules:
  - filters:
    - type: RequestRedirect
      requestRedirect:
        scheme: https
        statusCode: 301
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-nginx-1
  namespace: gateway
spec:
  parentRefs:
  - name: gateway-api-integrator
    namespace: gateway
    sectionName: gateway-api-integrator-https-listener
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: nginx-service
      port: 80
