jenkins-k8s-operator.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-k8s-service
  namespace: jenkins
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: jenkins-k8s
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-http
  namespace: jenkins
spec:
  gatewayClassName: cilium
  listeners:
  - protocol: HTTP
    port: 80
    name: gw-http-listener
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-jenkins-k8s-route
spec:
  parentRefs:
  - name: gateway-http
    namespace: jenkins
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: jenkins-k8s-service
      port: 8080
